Camera Control Work
Working on independant axis movement for camera.

--- a/TankBattle/.gitignore
+++ b/TankBattle/.gitignore
@@ -54,6 +54,11 @@ Binaries/*
 # Builds
 Build/*
 
+#Starter Content
+Content/StarterContent/*
+
+
+
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
 Build/*/**
